Add website files

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
             <th style="width: 12%;">จน.ลัง</th>
             <th style="width: 12%;">นน./ลัง(กก.)</th>
             <th style="width: 12%;">นน.รวม(กก.)</th>
-            <th style="width: 12%;">ราคา/กก.(บาท)</th>
-            <th style="width: 12%;" class="amount-column">จน.เงิน(บาท)</th>
+            <th style="width: 12%;">ราคา/กก.</th>
+            <th style="width: 12%;" class="amount-column">จน.เงิน</th>
           </tr>
         </thead>
         <tbody id="items-body">
